--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 <display-name>udnati</display-name>
 <context-param>
   <param-name>log4jConfigLocation</param-name> 
-  <param-value>log4j.xml</param-value> 
+  <param-value>log4j.properties</param-value> 
   </context-param>
    <listener>
   <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class> 
